kubernetes/apps/media/plex/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: &host "plex.${SECRET_DOMAIN}"
spec:
  ingressClassName: "internal"
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-plex-media-server
                port:
                  number: 32400
  tls:
    - hosts:
        - *host
